# hello-py11

./: .gitignore  CMakeLists.txt  setup.py
.github/workflows/: wheels.yml
notebooks/: test_numpy.Rmd
python/: CMakeLists.txt  module.cpp
python/adapters/: date.h  dates.h
python/habu/: __init__.py
src/: CMakeLists.txt
src/habu/: add.cpp  add.h  date.cpp  date.h
tests/: test_basic.py  test_numpy.py
